<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".wordlist.WordActivity"
    android:orientation="vertical"
    android:background="@color/theme_color_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_color">
            <ImageButton
                android:id="@+id/btn_word_back"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_back"
                android:background="@color/theme_color"
                android:layout_alignParentStart="true"
                android:layout_marginTop="18dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/back_text"
                />
            <TextView
                android:id="@+id/textview_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pocketnote_welcome_wordlist"
                android:textSize="20sp"
                android:padding="20dp"
                android:background="@color/theme_color"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pocketnote_wordlist_title1"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pocketnote_wordlist_title2"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pocketnote_wordlist_title3"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="#C0C0C0"
                android:padding="5dp"
                android:choiceMode="singleChoice"
                android:divider="@drawable/divider"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="true"
                />
            <TextView
                android:id="@+id/empty"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/pocketnote_empty"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_addword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/pocketnote_btn_add"
        android:textAllCaps="false"
        android:background="@color/theme_color"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonStyle"
        />

</RelativeLayout>