<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/theme_color_background"
    >

    <TextView
        android:id="@+id/textview_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pocketnote_welcome"
        android:textSize="20sp"
        android:padding="20dp"
        android:background="@color/theme_color"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color_background"
        android:textSize="24sp"
        android:textColor="#bc1717"
        android:text="@string/slogan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:divider="@drawable/divider2"
        android:showDividers="middle"
        android:gravity="center">

        <Button
            android:id="@+id/btn_word"
            android:text="@string/pocketnote_btn_to_wordlist"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textAllCaps="false"

            android:layout_width="240dp"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#485cc4"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />

        <Button
            android:id="@+id/btn_review"
            android:text="@string/pocketnote_btn_to_review"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textAllCaps="false"

            android:layout_width="240dp"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#485cc4"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_about"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/pocketnote_btn_to_about"
        android:textAllCaps="false"
        android:background="@color/theme_color"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonStyle"
        />

</RelativeLayout>
