<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    android:background="@color/theme_color_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color">
        <ImageButton
            android:id="@+id/btn_addword_back"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/theme_color"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/back_text"
            />
        <TextView
            android:id="@+id/textview_welcome_addword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pocketnote_welcome_addword"
            android:textSize="20sp"
            android:padding="20dp"
            android:background="@color/theme_color"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:id="@+id/addword_list">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_word"
                android:labelFor="@+id/addword_word"
                />
            <EditText
                android:id="@+id/addword_word"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:autofillHints="Word"
                android:inputType="text"
                android:theme="@style/MyEditText">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_translation"
                android:labelFor="@+id/addword_translation"
                />
            <EditText
                android:id="@+id/addword_translation"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:autofillHints="Translation"
                android:inputType="text"
                android:theme="@style/MyEditText">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_pos"
                android:labelFor="@+id/addword_pos"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addword_show_pos"
                android:padding="5dp"
                />
            <Spinner
                android:id="@+id/addword_pos"
                android:layout_width="32dp"
                android:layout_height="48dp"
                android:entries="@array/parts_of_speech"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_addword_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/pocketnote_submit"
        android:textAllCaps="false"
        android:background="@color/theme_color"
        android:textColor="@color/white"
        android:padding="10dp"
        />

</RelativeLayout>