<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wordlist.WordView"
    android:background="@color/theme_color_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color">
        <ImageButton
            android:id="@+id/btn_wordview_back"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/theme_color"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/back_text"
            />
        <TextView
            android:id="@+id/textview_welcome_addword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pocketnote_welcome_wordview"
            android:textSize="20sp"
            android:padding="20dp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_centerInParent="true"
        android:id="@+id/wordview_word"
        android:translationZ="1dp"
        android:elevation="1dp"
        android:background="@drawable/word_view_shape">

        <TextView
            android:id="@+id/tv_word_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/tv_word_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_alignParentBottom="true"
            />

        <TextView
            android:id="@+id/tv_word_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/tv_word_word"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_wordview_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_this_word"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="#bc1717"
        />

</RelativeLayout>